test/stg/error/funName1.stg
-- Duplicate identifiers in let block
badFunc = FUN(x -> let {y = THUNK(x);
	  	   	y = THUNK(x)} in y);